# TDT4173-ModernML

./: .gitignore  EDA.ipynb  PROJECT.ipynb  PROJECT2.ipynb  README.md  XGBoost_submission_v0.ipynb  clean_purchase_orders.ipynb  material_receival_visualization.ipynb  preprocessing_materials.py  report.ipynb  requirements.txt  v1_XGBoost_submission_v1.ipynb
christian/: README.md  basic_xgboost.ipynb  clean_materials_utils.py  clean_purchase_orders.ipynb  pyproject.toml
christian/csv/: christian_predict_df.csv
christian/predictions/: basic_xgboost_jan-may_2024.csv  basic_xgboost_predictions_whole2024.csv
christian/tests/: test_materials_csv.py  test_remove_deleted_materials.py
christian/tests/material_csv/: six_entries.csv
data/: expected_deliveries.7z
data/kernel/: clean_purchase_orders.ipynb
data_cleaned/: generate_cleaned_files.ipynb  purchase_orders_cleaned.csv
docs/: note-on-updated-version.md
old_files/: PROJECT2.ipynb  XGBoost_submission_v0.ipynb  pyproject.toml
old_files/christian/: main.py  preprocessing_materials.py
old_files/christian/csv/: christian_predict_df.csv
old_files/christian/predictions/: basic_xgboost_predictions.csv  basic_xgboost_predictions_jan-may_2021-2024_day_of_week.csv  basic_xgboost_predictions_whole2024_day_of_week.csv
old_files/christian/tests/: test_read_receivals.py
old_files/christian/tests/material_csv/: extract_unique_rm_pairs.csv  many_product_versions.csv
old_files/completely_useless/: PROJECT.ipynb  v1_XGBoost_submission_v1.ipynb
old_files/submission_not_used/: README.md  Short_notebook_2.ipynb  pyproject.toml
old_files/testing/dead-projects/: DEADGE_cumulative[FAIL].ipynb
old_files/validation/: fallback.ipynb
old_files/visualization/: FULL_PIPELINE_more_features_submission.csv  deprecated_materials.ipynb
submission/: README.md  Short_notebook_1.ipynb  Short_notebook_2_CUMULATIVE.ipynb  Short_notebook_2_MORE_FEATURES.ipynb  Short_notebook_TWEEDIE.ipynb  pyproject.toml  report_tft.ipynb
testing/: ARIMA.ipynb  DEADGE.ipynb  DEADGE_hypertuning.ipynb  DEADGE_submission.csv  TFT.ipynb  pyproject.toml
testing/dead-projects/: ARIMA.ipynb  DEADGE_cumulative[FAIL].csv
validation/: DEADGE_submission0825.csv  DEADGE_submission0825_fallbacks.csv  DEADGE_submission0825_tweedie_fallbacks.csv  Tweedie_processed.csv  add_fallbacks_to_submission.ipynb  submission_2024.csv  test.ipynb  test2024.csv  validation.ipynb
visualization/: deprecated_materials.ipynb
