[project]
name = "christian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
