[project]
name = "old-files"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "autogluon>=1.4.0",
    "ipynbname>=2025.8.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
