[project]
name = "submission"
version = "0.1.0"
description = "Contains all the files which are submitted."
requires-python = ">=3.14"
dependencies = [
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytorch-forecasting>=1.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
