[project]
name = "testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lightning>=2.0.0",
    "matplotlib>=3.5.0",
    "numpy<2.0.0",
    "pandas>=1.5.0",
    "pytorch-forecasting>=1.0.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.9.0",
    "tensorboard>=2.10.0",
    "torch>=2.0.0",
]
